# otus5_matrix

./: .travis.yml  CMakeLists.txt
libs/: CMakeLists.txt  lib_matrix.cpp  lib_matrix.h
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  test_matrix.cpp
